--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
-
-    <meta name="theme-color" content="##062e66" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="theme-color" content="#062e66" />
     <style>
       body {
         font-size: 22px;
@@ -75,11 +79,6 @@
   </head>
 
   <body>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-
     <div class="outer-wrap">
       <h1 class="title">Get Your Mentor<span>.org</span></h1>
 
